fix: highlight line z-index

--- a/src/styles/styles.typography.css
+++ b/src/styles/styles.typography.css
@@ -227,6 +227,7 @@ a.nav-link:hover {
   height: 25%;
   width: 100%;
   position: absolute;
+  z-index: -1;
 
   bottom: 0;
   left: 0;
